--- a/v4_simple_ut99/scoreboard_generic.html
+++ b/v4_simple_ut99/scoreboard_generic.html
@@ -16,7 +16,7 @@
                 --score-marker-font-size: 15px;
                 --score-top-offset: 3px;
                 --score-names-gap: 352px;
-                --series-top-offset: 5px;
+                --series-top-offset: 50px;
             }
             body{
 /*                background-color: #2d2e2d;*/
@@ -136,7 +136,7 @@
             .blue { color: #1300be; }
 
             .team0 { 
-                background-color: rgba(181, 8, 0, 0.2);
+                background-color: rgba(181, 8, 0, 0.5);
                 width: 400px;
                 margin-right: var(--score-names-gap);
                 margin-left: auto;
@@ -144,7 +144,7 @@
                 flex-direction: row;                
             }
             .team1 { 
-                background-color: rgba(19, 0, 190, 0.2);
+                background-color: rgba(19, 0, 190, 0.5);
                 width: 400px;    
                 margin-right: auto;
                 display:flex;
@@ -153,7 +153,7 @@
             .series {
                 color:#fff;
                 position: absolute;
-                top: var(--score-top-offset);
+                top: var(--series-top-offset);
                 width: 100%;
                 height: 20px;
                 text-align: center;
